--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -179,7 +179,6 @@
             <child>
               <object class="GtkVBox" id="vbox12">
                 <property name="visible">True</property>
-                <property name="spacing">6</property>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow_update">
                     <property name="visible">True</property>
@@ -209,10 +208,9 @@
                 </child>
                 <child>
                   <object class="GtkVBox" id="vbox_alerts">
-                    <property name="visible">True</property>
+                    <property name="spacing">3</property>
                     <child>
                       <object class="GtkHBox" id="hbox_downsize">
-                        <property name="visible">True</property>
                         <child>
                           <object class="GtkImage" id="image_downsize">
                             <property name="visible">True</property>
@@ -241,7 +239,6 @@
                     </child>
                     <child>
                       <object class="GtkHBox" id="hbox_battery">
-                        <property name="visible">True</property>
                         <child>
                           <object class="GtkImage" id="image_battery">
                             <property name="visible">True</property>
@@ -269,7 +266,6 @@
                     </child>
                     <child>
                       <object class="GtkHBox" id="hbox_offline">
-                        <property name="visible">True</property>
                         <child>
                           <object class="GtkImage" id="image_offline">
                             <property name="visible">True</property>
@@ -283,7 +279,6 @@
                         <child>
                           <object class="GtkLabel" id="label_offline">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">You may not be able to check or download updates when offline.</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -297,6 +292,8 @@
                     </child>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -313,7 +310,7 @@
                         <property name="spacing">6</property>
                         <property name="homogeneous">True</property>
                         <child>
-                          <object class="GtkButton" id="button1">
+                          <object class="GtkButton" id="button_reload">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="can_default">True</property>
@@ -411,9 +408,6 @@
                             <property name="position">1</property>
                           </packing>
                         </child>
-                        <child>
-                          <placeholder/>
-                        </child>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -428,6 +422,7 @@
                 </child>
               </object>
               <packing>
+                <property name="padding">6</property>
                 <property name="position">3</property>
               </packing>
             </child>
