--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -211,6 +211,7 @@
                     <property name="spacing">3</property>
                     <child>
                       <object class="GtkHBox" id="hbox_downsize">
+                        <property name="spacing">12</property>
                         <child>
                           <object class="GtkImage" id="image_downsize">
                             <property name="visible">True</property>
@@ -239,6 +240,7 @@
                     </child>
                     <child>
                       <object class="GtkHBox" id="hbox_battery">
+                        <property name="spacing">12</property>
                         <child>
                           <object class="GtkImage" id="image_battery">
                             <property name="visible">True</property>
@@ -266,6 +268,7 @@
                     </child>
                     <child>
                       <object class="GtkHBox" id="hbox_offline">
+                        <property name="spacing">12</property>
                         <child>
                           <object class="GtkImage" id="image_offline">
                             <property name="visible">True</property>
@@ -302,7 +305,12 @@
                     <property name="visible">True</property>
                     <property name="spacing">12</property>
                     <child>
-                      <placeholder/>
+                      <object class="GtkLabel" id="label_placeholder">
+                        <property name="visible">True</property>
+                      </object>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
                     </child>
                     <child>
                       <object class="GtkHBox" id="hbox19">
