--- a/DistUpgrade/DistUpgrade.ui
+++ b/DistUpgrade/DistUpgrade.ui
@@ -13,13 +13,11 @@
     <child>
       <object class="GtkVBox" id="vbox5">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkVBox" id="vbox_main">
             <property name="visible">True</property>
             <property name="border_width">6</property>
-            <property name="orientation">vertical</property>
             <property name="spacing">12</property>
             <child>
               <object class="GtkLabel" id="label_title">
@@ -310,7 +308,6 @@
             <child>
               <object class="GtkVBox" id="vbox22">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">4</property>
                 <child>
                   <object class="GtkProgressBar" id="progressbar_cache">
@@ -397,10 +394,9 @@
   </object>
   <object class="GtkDialog" id="dialog_changes">
     <property name="border_width">6</property>
-    <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="default_width">500</property>
-    <property name="default_height">400</property>
+    <property name="default_height">550</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
@@ -409,7 +405,6 @@
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox2">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkHBox" id="hbox12">
@@ -432,7 +427,6 @@
             <child>
               <object class="GtkVBox" id="vbox3">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="label_summary">
@@ -466,11 +460,10 @@
                   <object class="GtkExpander" id="expander_details">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="expanded">True</property>
                     <property name="spacing">6</property>
                     <child>
                       <object class="GtkScrolledWindow" id="scrolledwindow1">
-                        <property name="width_request">400</property>
-                        <property name="height_request">200</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="hscrollbar_policy">automatic</property>
@@ -566,7 +559,6 @@
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkHBox" id="hbox5">
@@ -701,7 +693,6 @@ Please save your work before continuing.</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox6">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkHBox" id="hbox8">
@@ -724,7 +715,6 @@ Please save your work before continuing.</property>
             <child>
               <object class="GtkVBox" id="vbox7">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="label_error">
@@ -837,13 +827,11 @@ Please save your work before continuing.</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox8">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkVBox" id="vbox9">
             <property name="visible">True</property>
             <property name="border_width">6</property>
-            <property name="orientation">vertical</property>
             <property name="spacing">12</property>
             <child>
               <object class="GtkHBox" id="hbox9">
@@ -865,7 +853,6 @@ Please save your work before continuing.</property>
                 <child>
                   <object class="GtkVBox" id="vbox10">
                     <property name="visible">True</property>
-                    <property name="orientation">vertical</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkLabel" id="label26">
@@ -1009,7 +996,6 @@ Please save your work before continuing.</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox11">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkHBox" id="hbox11">
@@ -1110,7 +1096,6 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox12">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkHBox" id="hbox15">
@@ -1134,7 +1119,6 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
             <child>
               <object class="GtkVBox" id="vbox13">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="label_conffile">
@@ -1166,7 +1150,6 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
             <child>
               <object class="GtkVBox" id="vbox14">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow5">
                     <property name="visible">True</property>
@@ -1332,7 +1315,6 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox15">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkHBox" id="hbox16">
@@ -1355,7 +1337,6 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
             <child>
               <object class="GtkVBox" id="vbox16">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="label_information">
