* UpdateManager/UpdateManager.py, data/glade/UpdateManager.ui:   - fix label wraping for label_downsize

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -226,6 +226,7 @@
                           <object class="GtkLabel" id="label_downsize">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
+                            <property name="wrap">True</property>
                             <property name="label">
 </property>
                           </object>
