Replace &#x2019 with real character in glade file. Fixes LP: 633036

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -255,7 +255,7 @@
                         <child>
                           <object class="GtkLabel" id="label_battery">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">It&#x2019;s safer to connect the computer to AC power before updating.</property>
+                            <property name="label" translatable="yes">It’s safer to connect the computer to AC power before updating.</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
