* DistUpgrade/DistUpgradeView*.py:   - pass apt.Package object to the view instead of strings, this     allows to show additional info on the packages (like summary     or size)

--- a/DistUpgrade/DistUpgrade.ui
+++ b/DistUpgrade/DistUpgrade.ui
@@ -402,6 +402,7 @@
     <property name="skip_pager_hint">True</property>
     <property name="urgency_hint">True</property>
     <property name="has_separator">False</property>
+    <property name="resizable">True</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="vbox2">
         <property name="visible">True</property>
