*  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py:   - improve wording of roaming warning, thanks to Alex Chiang   - make the roaming warning label wrap

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -1081,7 +1081,8 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_roaming">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">You are connected via roaming, updating may be expensive.</property>
+                            <property name="wrap">True</property>
+                            <property name="label" translatable="yes">You are connected via roaming and may be charged for the data consumed by this update.</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
