Fix for Missing keyboard shortcut for Settings.

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -1407,7 +1407,7 @@ Your system does not check for updates automatically. You can configure this beh
             <property name="spacing">12</property>
             <child>
               <object class="GtkButton" id="button_settings">
-                <property name="label" translatable="yes">Settings...</property>
+                <property name="label" translatable="yes">_Settings...</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
