--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -1207,7 +1207,7 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="can_default">True</property>
-                            <property name="receives_default">False</property>
+                            <property name="receives_default">True</property>
 			    <property name="image">image-refresh</property>
 			    <property name="use_underline">True</property>
                             <property name="use_action_appearance">False</property>
@@ -1226,7 +1226,7 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="can_focus">True</property>
                             <property name="can_default">True</property>
                             <property name="has_default">True</property>
-                            <property name="receives_default">False</property>
+                            <property name="receives_default">True</property>
 			    <property name="image">image-apply</property>
 			    <property name="use_underline">True</property>
                             <property name="use_action_appearance">False</property>
@@ -1411,7 +1411,7 @@ Your system does not check for updates automatically. You can configure this beh
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
-                <property name="receives_default">False</property>
+                <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_underline">True</property>
                 <signal name="clicked" handler="on_button_settings_clicked" swapped="no"/>
@@ -1437,7 +1437,7 @@ Your system does not check for updates automatically. You can configure this beh
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="can_default">True</property>
-                    <property name="receives_default">False</property>
+                    <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
                     <property name="use_stock">True</property>
                     <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
