Set receive default on Upgrade button too (LP: #628186)

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -878,7 +878,7 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="label" translatable="yes">U_pgrade</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
+                            <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
                             <property name="use_underline">True</property>
                             <signal name="clicked" handler="on_button_dist_upgrade_clicked" swapped="no"/>
@@ -1206,7 +1206,6 @@ Your system does not check for updates automatically. You can configure this beh
 			    <property name="label" translatable="yes">Chec_k</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="can_default">True</property>
                             <property name="receives_default">True</property>
 			    <property name="image">image-refresh</property>
 			    <property name="use_underline">True</property>
@@ -1410,7 +1409,6 @@ Your system does not check for updates automatically. You can configure this beh
                 <property name="label" translatable="yes">Settings...</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_underline">True</property>
