data/glade/UpdateManager.ui: set the various labels to word wrap mode

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -1090,6 +1090,7 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes">You are connected via a wireless modem.</property>
+                            <property name="wrap">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1125,6 +1126,7 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes">It’s safer to connect the computer to AC power before updating.</property>
+                            <property name="wrap">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1159,6 +1161,7 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_offline">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="wrap">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1435,8 +1438,8 @@ Your system does not check for updates automatically. You can configure this beh
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
                     <property name="use_stock">True</property>
-                    <accelerator key="W" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                     <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                    <accelerator key="W" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
