data/glade/UpdateManager.ui: fix xalign and expand properties of the various alert text in the main ui

--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -1053,11 +1053,12 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_roaming">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="xalign">0</property>
                             <property name="label" translatable="yes">You are connected via roaming and may be charged for the data consumed by this update.</property>
                             <property name="wrap">True</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
                             <property name="fill">True</property>
                             <property name="position">1</property>
                           </packing>
@@ -1089,11 +1090,12 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_on_3g">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="xalign">0</property>
                             <property name="label" translatable="yes">You are connected via a wireless modem.</property>
                             <property name="wrap">True</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
                             <property name="fill">True</property>
                             <property name="position">1</property>
                           </packing>
@@ -1125,11 +1127,12 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_battery">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="xalign">0</property>
                             <property name="label" translatable="yes">It’s safer to connect the computer to AC power before updating.</property>
                             <property name="wrap">True</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
                             <property name="fill">True</property>
                             <property name="position">1</property>
                           </packing>
@@ -1161,10 +1164,11 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_offline">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="xalign">0</property>
                             <property name="wrap">True</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
+                            <property name="expand">True</property>
                             <property name="fill">True</property>
                             <property name="position">1</property>
                           </packing>
