Fix resize on changes dialog to stretch the details (LP: #294293)

--- a/DistUpgrade/DistUpgrade.ui
+++ b/DistUpgrade/DistUpgrade.ui
@@ -211,7 +211,7 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -225,7 +225,7 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -272,7 +272,7 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
