--- a/data/gtkbuilder/UpgradePromptDialog.ui
+++ b/data/gtkbuilder/UpgradePromptDialog.ui
@@ -150,7 +150,7 @@
     <property name="type_hint">normal</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="text" translatable="yes">You have declined to upgrade to the new Ubuntu</property>
-    <property name="secondary_text" translatable="yes">You can upgrade at a later time by opening Update Manager and click on "Upgrade".</property>
+    <property name="secondary_text" translatable="yes">You can upgrade at a later time by opening Software Updater and click on "Upgrade".</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
