don't show Starting Software Updater in main label since we are usually seeing it after having already started Software Updater; move icon name of dialog logo to the glade file

--- a/data/gtkbuilder/UpdateManager.ui
+++ b/data/gtkbuilder/UpdateManager.ui
@@ -644,6 +644,8 @@ This can be caused by:
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="yalign">0</property>
+                    <property name="pixel_size">48</property>
+                    <property name="icon_name">system-software-update</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -656,7 +658,6 @@ This can be caused by:
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Starting Software Updater</property>
                     <property name="use_underline">True</property>
                     <property name="wrap">True</property>
                     <attributes>
@@ -820,6 +821,9 @@ This can be caused by:
                             </child>
                             <signal name="cursor-changed" handler="on_treeview_update_cursor_changed" swapped="no"/>
                             <signal name="row-activated" handler="on_treeview_update_row_activated" swapped="no"/>
+                            <child internal-child="selection">
+                              <object class="GtkTreeSelection" id="treeview-selection2"/>
+                            </child>
                           </object>
                         </child>
                       </object>
