--- a/data/gtkbuilder/UpdateManager.ui
+++ b/data/gtkbuilder/UpdateManager.ui
@@ -617,13 +617,10 @@ This can be caused by:
       </object>
     </child>
   </object>
-  <object class="GtkWindow" id="window_main">
+  <object class="GtkWindow" id="window_updates_available">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Software Updater</property>
-    <property name="resizable">False</property>
-    <property name="window_position">center</property>
     <child>
-      <object class="GtkVBox" id="vbox_main">
+      <object class="GtkVBox" id="pane_updates_available">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="border_width">6</property>
@@ -822,7 +819,7 @@ This can be caused by:
                             <signal name="cursor-changed" handler="on_treeview_update_cursor_changed" swapped="no"/>
                             <signal name="row-activated" handler="on_treeview_update_row_activated" swapped="no"/>
                             <child internal-child="selection">
-                              <object class="GtkTreeSelection" id="treeview-selection2"/>
+                              <object class="GtkTreeSelection" id="treeview-selection"/>
                             </child>
                           </object>
                         </child>
@@ -1200,8 +1197,8 @@ This can be caused by:
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
-                <accelerator key="W" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                 <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                <accelerator key="W" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
               </object>
               <packing>
                 <property name="expand">False</property>
