--- a/data/gtkbuilder/UpdateManager.ui
+++ b/data/gtkbuilder/UpdateManager.ui
@@ -198,7 +198,7 @@
                           <object class="GtkLabel" id="label13">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Description</property>
+                            <property name="label" translatable="yes">Technical description</property>
                           </object>
                         </child>
                       </object>
@@ -454,7 +454,7 @@
             </child>
             <child>
               <object class="GtkButton" id="button_close">
-                <property name="label">gtk-close</property>
+                <property name="label">gtk-cancel</property>
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
