Set icon_name in the dialogs so that there will be an icon in gnome-shell. (LP: #1797384)

--- a/data/gtkbuilder/DistUpgrade.ui
+++ b/data/gtkbuilder/DistUpgrade.ui
@@ -1131,6 +1131,7 @@ Please save your work before continuing.</property>
     </action-widgets>
   </object>
   <object class="GtkWindow" id="window_main">
+    <property name="icon_name">system-software-update</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
