--- a/data/gtkbuilder/ReleaseNotes.ui
+++ b/data/gtkbuilder/ReleaseNotes.ui
@@ -2,6 +2,7 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkDialog" id="dialog_release_notes">
+    <property name="icon_name">system-software-update</property>
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Release Notes</property>
