--- a/data/gtkbuilder/UpgradePromptDialog.ui
+++ b/data/gtkbuilder/UpgradePromptDialog.ui
@@ -3,6 +3,7 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="window_main">
+    <property name="icon_name">system-software-update</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
     <signal name="delete_event" handler="window_delete_event_cb"/>
@@ -165,6 +166,7 @@
     </action-widgets>
   </object>
   <object class="GtkWindow" id="window_fetch">
+    <property name="icon_name">system-software-update</property>
     <property name="border_width">6</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
